--- a/main.html
+++ b/main.html
@@ -10,7 +10,26 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+ <nav>
+	 <ul>
+		 <li><a href="">H</a></li>
+		 <li><a href="">B</a></li>
+		 <li><a href="">T</a></li>
+	 </ul>
+ </nav>
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
+		
+	</audio>
+	 </nav>
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+		
+	</audio>
+		 </nav>
+	<audio controls>
+		<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+	</audio>
 </body>
 
 </html>
