--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
- <nav>
+ <nav> 
 	 <ul>
-		 <li><a href="">H</a></li>
-		 <li><a href="">B</a></li>
-		 <li><a href="">T</a></li>
+		 <li><a href="https://soundcloud.com/9j6hz3zlokbb/jotaro-vs-dio-part-1?in=user-276538827/sets/random-audio-clips&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">H</a></li>
+		 <li><a href="https://soundcloud.com/user863990498/jojos-dios-the-world-time-stop?in=user-276538827/sets/random-audio-clips&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">B</a></li>
+		 <li><a href="https://soundcloud.com/diocoolsupercool/take-on-wryyy?in=user-276538827/sets/random-audio-clips&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">T</a></li>
 	 </ul>
  </nav>
 	<audio controls>
