--- a/main.html
+++ b/main.html
@@ -17,8 +17,8 @@
 		 <li><a href="https://soundcloud.com/diocoolsupercool/take-on-wryyy?in=user-276538827/sets/random-audio-clips&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">T</a></li>
 	 </ul>
  </nav>
-	<h3>3 random audios</h3>
-	<audio controls> 
+
+	<audio controls title="3 random audios"> 
 		
 		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
 		
