--- a/main.html
+++ b/main.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
@@ -17,18 +16,15 @@
 		 <li><a href="https://soundcloud.com/diocoolsupercool/take-on-wryyy?in=user-276538827/sets/random-audio-clips&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">T</a></li>
 	 </ul>
  </nav>
-
-	<audio controls title="3 random audios"> 
+  <label> 3 random audios</label>
+	<audio controls> 
 		
 		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
-		
 	</audio>
-	 </nav>
+	
 	<audio controls>
 		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
-		
 	</audio>
-		 </nav>
 	<audio controls>
 		<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
 	</audio>
