--- a/main.html
+++ b/main.html
@@ -16,12 +16,10 @@
 		 <li><a href="https://soundcloud.com/diocoolsupercool/take-on-wryyy?in=user-276538827/sets/random-audio-clips&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">T</a></li>
 	 </ul>
  </nav>
-  <label> 3 random audios</label>
-	<audio controls> 
-		
+	<p>This is some text related to the first audio:</p>
+	<audio controls title="3 random audios"> 
 		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
 	</audio>
-	
 	<audio controls>
 		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
 	</audio>
