--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 	 </ul>
  </nav>
 	<p>3 random audios</p>
-	<audio controls title="3 random audios"> 
+	<audio controls> 
 		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mpeg">
 	</audio>
 	<audio controls>
